# PhaseFlux

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflow/: linting.yml
.github/workflows/: docker.yml  linting.yml
src/: app.py  helpers.py
tests/: test_app.py
