[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phaseflux"
version = "0.1.0"
description = "A Streamlit app for predicting flow regimes in multiphase flow"
authors = [
    {name = "Alessandro Benetti", email = "benettialessandro96@gmail.com"},
]
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "shap",
    "plotly",
    "scikit-learn",
    "lightgbm",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "ruff",
    "isort",
    "autopep8",
    "pre-commit",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint.main]
jobs = 8
